Fix table of contents width on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -425,7 +425,7 @@ h6:hover .header-link {
     background-color: #f8f9fa;
     padding: 12px 36px;
     border: dashed 1px #000;
-    min-width: 300px;
+    width: 100%;
     margin-bottom: 20px;
     margin-left: 0;
 }
